test/tests/stages/6_statements_and_conditional_expressions/valid/ternary_middle_binop.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[21]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ?
  const int(3)
  %
  const int(2)
  :
  const int(4)
  ;
  return
  identifier(a)
  ;
  }
