test/tests/stages/6_statements_and_conditional_expressions/invalid_parse/malformed_ternary_2.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(1)
  ?
  const int(2)
  ?
  const int(3)
  :
  const int(4)
  ;
  }
